# monet-style-image-transformation-pipeline

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  README.md  commands.py  pyproject.toml
.dvc/: config
conf/: config.yaml
configs/: config.yaml
configs/logging/: default.yaml
configs/model/: baseline.yaml  cyclegan.yaml
configs/postprocessing/: default.yaml
configs/preprocessing/: default.yaml
configs/training/: default.yaml
data/raw/: .gitignore  monet_dataset.dvc  monet_dataset.tar.gz.dvc
models/: .gitignore  baseline_decoder.pth  baseline_decoder.pth.dvc
monet_pipeline/data/: data_loader.py
monet_pipeline/evaluation/: evaluate_baseline.py  metrics.py
monet_pipeline/models/: __init__.py  baseline_adain.py  baseline_nst.py  cyclegan.py  losses.py
scripts/: make_dataset_splits.py
src/data/: data_loader.py  make_dataset_splits.py
src/evaluation/: evaluate_baseline.py  metrics.py
src/models/: baseline_nst.py
