[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monet-style-image-transformation-pipeline"
version = "0.1.0"
description = "End-to-end MLOps pipeline for CycleGAN-based Monet-style image translation."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    # Deep learning core
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    # Training framework & utilities
    "pytorch-lightning>=2.0.0",
    "deepspeed>=0.9.0",
    # Data handling & visualization
    "numpy>=1.23.0",
    "matplotlib>=3.7.0",
    "Pillow>=9.5.0",
    # MLOps — data versioning
    "dvc>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
