[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monet-style-image-transformation-pipeline"
version = "0.1.0"
description = "End-to-end MLOps pipeline for CycleGAN-based Monet-style image translation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    # Deep learning core
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    # Training framework & utilities
    "pytorch-lightning>=2.0.0",
    # NOTE: deepspeed is Linux-only; listed for reproducibility on training servers
    # "deepspeed>=0.9.0",
    # Data handling & visualization
    "numpy>=1.23.0",
    "matplotlib>=3.7.0",
    "Pillow>=9.5.0",
    # Scientific computing (MiFID Fréchet distance)
    "scipy>=1.10.0",
    # Progress bars
    "tqdm>=4.65.0",
    # MLOps — data versioning
    "dvc>=3.0.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
