[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monet-style-image-transformation-pipeline"
version = "0.1.0"
description = "End-to-end MLOps pipeline for CycleGAN-based Monet-style image translation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    # Deep learning core
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    # Training framework & utilities
    "pytorch-lightning>=2.0.0",
    # NOTE: deepspeed is Linux-only; listed for reproducibility on training servers
    # "deepspeed>=0.9.0",
    # Data handling & visualization
    "numpy>=1.23.0",
    "matplotlib>=3.7.0",
    "Pillow>=9.5.0",
    # Scientific computing (MiFID Fréchet distance)
    "scipy>=1.10.0",
    # Progress bars
    "tqdm>=4.65.0",
    # MLOps — data versioning
    "dvc>=3.0.0",
    "dvc-gdrive>=3.0.1",
    "pandas>=2.3.3",
    "hydra-core>=1.3.2",
    "fire>=0.6.0",
    "mlflow>=2.8.0",
    "greenlet<=3.1.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.1.1.230928",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.1.1.230928",
]

[tool.hatch.build.targets.wheel]
packages = ["monet_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[tool.mypy]
strict = true
ignore_missing_imports = true
files = ["monet_pipeline", "commands.py"]
